--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-09 22:45:03
+lastsearch = 2024-07-10 00:12:47
 
 [shopee.vn]
 match = 0.0%%
@@ -148,8 +148,8 @@ url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [demxanh.com]
 match = -18.5%%
-title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+title = Chăn tuyết Hàn Quốc Soft 2kg màu xanh hình tim
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-hinh-trai-tim.html
 
 [vnvc.vn]
 match = -59.3%%
