--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-09 22:31:50
+lastsearch = 2024-07-10 00:16:41
 
 [hk.linkedin.com]
 match = -23.1%%
@@ -22,9 +22,9 @@ title = Once Upon
 url = https://www.solunafineart.com/once-upon
 
 [en.wikipedia.org]
-match = -25.0%%
-title = Coco Lee
-url = https://en.wikipedia.org/wiki/Coco_Lee
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Coco_Chanel
 
 [www.sassymamahk.com]
 match = -246.2%%
