--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-09 23:38:31
+lastsearch = 2024-07-10 00:15:35
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -145,4 +145,9 @@ url = https://chieutruc.info/chieu-tam-ht/
 match = 20.0%%
 title = Chiếu Trúc
 url = https://www.nemsaithanh.com/san-pham/chieu-truc-135.html
+
+[dangquanglighting.com]
+match = -80.0%%
+title = Đèn LED Spotlight Âm Trần 8091 14W
+url = https://dangquanglighting.com/den-led-spotlight-am-tran-8091-14w/
 
