--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-09 22:51:36
+lastsearch = 2024-07-10 00:19:48
 
 [chieutruc.info]
 match = -100.0%%
@@ -42,9 +42,9 @@ title = Chiếu Cói Thân Vui Thái Bình
 url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
 
 [medlatec.vn]
-match = -122.7%%
-title = Bảng cân nặng thai nhi theo tuần và những lưu ý dành cho ...
-url = https://medlatec.vn/tin-tuc/bang-can-nang-thai-nhi-theo-tuan-va-nhung-luu-y-danh-cho-me-bau-s51-n17694
+match = -109.1%%
+title = Sự phát triển của thai 18 tuần và những thay đổi trên cơ ...
+url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-doi-tren-co-the-thai-phu-s74-n28778
 
 [www.lazada.vn]
 match = -68.2%%
