--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-09 22:50:31
+lastsearch = 2024-07-10 00:13:10
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -200.0%%
-title = My condo HOA has an outright ban on any kids living in the ...
-url = https://www.reddit.com/r/legaladvice/comments/11a9d9s/my_condo_hoa_has_an_outright_ban_on_any_kids/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
 match = -141.2%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -217.6%%
-title = This home owners association president gets put in our place ...
-url = https://www.tiktok.com/@themanwiththehat/video/7359924561258745120
+match = -170.6%%
+title = Original Video of Hoa Guy Fines Neighbor for to Many ...
+url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
 
 [www.21alivenews.com]
 match = -123.5%%
