--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-09 22:47:58
+lastsearch = 2024-07-10 00:48:35
 
 [hoa18.com]
-match = -173.7%%
-title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài lộc trong ...
-url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
+match = -84.2%%
+title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
+url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -142.9%%
-title = YouTube
-url = https://www.youtube.com/watch?v=P2FZLlxjB4U
+match = -147.4%%
+title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
+url = https://www.youtube.com/watch?v=NPdIFgtFTso
 
 [kallos.co]
 match = -105.3%%
