--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-09 21:31:20
+lastsearch = 2024-07-10 00:44:45
 
 [www.youtube.com]
 match = -88.0%%
@@ -42,9 +42,9 @@ title = Doanh nhân Đài Loan bất ngờ qua đời khi muốn rút tài sản
 url = https://trithucvn.co/trung-quoc/doanh-nhan-dai-loan-bat-ngo-qua-doi-khi-muon-rut-tai-san-khoi-trung-quoc.html
 
 [books.google.com]
-match = -92.0%%
-title = Đại doàn kết - Issues 9-29 - Page 23 - Google Books Result
-url = https://books.google.com/books?id=_yPpAAAAMAAJ&pg=RA5-PA23&lpg=RA5-PA23&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=fHS1OUUol9&sig=ACfU3U3UwdM-NdJjfq-zi43K63fm0bEUGw&hl=en&sa=X&ved=2ahUKEwjRq9GerZmHAxXeC3kGHXPtAVoQ6AF6BAgWEAM
+match = -116.0%%
+title = Trung Xô Mỹ Cuộc Đối Đầu Lịch Sử - Page 637 - Google Books Result
+url = https://books.google.com/books?id=xfvcEAAAQBAJ&pg=PA637&lpg=PA637&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=qWSSJHi6Ly&sig=ACfU3U2Nduj4hJwUtmhEy3eY1VY0G0uYrA&hl=en&sa=X&ved=2ahUKEwjspeuuwZqHAxU9GtAFHdPfBNYQ6AF6BAgeEAM
 
 [www.skyscanner.com.vn]
 match = -80.0%%
