--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-09 23:16:37
+lastsearch = 2024-07-10 00:44:12
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -153.3%%
-title = BELL UEH - [BELL's Connections] 🔥 [LỘ DIỆN ...
-url = https://www.facebook.com/bellueh/photos/a.278570742194275/5640041046047191/?type=3
+match = -186.7%%
+title = K's Closet - 👧❣ K'S CLOSET TRUY TÌM MẪU NHÍ BABY ...
+url = https://www.facebook.com/photo.php?fbid=2071701952848860&id=1059845080701224&set=a.1067288753290190&locale=is_IS
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -173,8 +173,8 @@ url = https://dochoibacha.com/
 
 [www.vietnamairport.vn]
 match = -240.0%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
-url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
+title = Thông tin về tài sản, hành lý của khách đánh rơi, bỏ quên ...
+url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-ve-tai-san-hanh-ly-cua-khach-danh-roi-bo-quen/thong-tin-ve-tai-san-hanh-ly-cua-khach-danh-roi-bo-quen-tai-cang-hkqt-tan-son-nhat-tu-08-9-2023-10-9-2023-information-of-passengers-unclaimed-property-from-sept-8-10-2023
 
 [www.victoriavn.com]
 match = -6.7%%
@@ -305,4 +305,14 @@ url = https://capnuoccholon.com.vn/
 match = -46.7%%
 title = Bản án số: 384/2024/DS-PT
 url = https://static3.luatvietnam.vn/uploaded/LawJudgs/docs/2024/05/30/ban-an-384-2024-ds-pt-192606.docx
+
+[taekwondoviethan.com]
+match = -100.0%%
+title = Chiêu sinh & Lịch học - Học võ Taekwondo
+url = https://taekwondoviethan.com/chieu-sinh-lich-hoc/
+
+[vn.raptorsupplies.com]
+match = -246.7%%
+title = STARRETT Lưỡi cưa 91140-07-09-1/2 10474, Chiều rộng lưỡi ...
+url = https://vn.raptorsupplies.com/pd/starrett/91140-07-09-1-2
 
