--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-10 00:31:54
+lastsearch = 2024-07-10 00:44:00
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = Cung Cấp Bàn Ghế Đá Granito Miền Bắc Rẻ Nhất Thị ...
 url = https://ghedamienbac.com/ban-ghe-da-granito/
 
 [noithathoaphat.com]
-match = -290.9%%
-title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
-url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
+match = -245.5%%
+title = Ghế da trưởng phòng SG718 - Nội Thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg718
 
 [dandoxe.com]
 match = -154.5%%
