--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-09 23:46:35
+lastsearch = 2024-07-10 00:47:42
 
 [www.lazada.vn]
 match = -268.8%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -6.2%%
-title = Huda Beauty Lip Stain
-url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
+match = -181.2%%
+title = Gorgeous @ARLINDA🤍 #beautytok #liptutorial #hudabeauty
+url = https://www.tiktok.com/@hudabeauty/video/7370757654081244459
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
@@ -42,8 +42,8 @@ title = Categories - MTL Novel Portuguese
 url = https://pt.mtlnovel.com/categories/
 
 [www.diepxuan.com]
-match = -150.0%%
-title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
+match = -93.8%%
+title = Nệm bông - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong.html?p=2
 
 [diepxuan.com]
@@ -119,5 +119,5 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/
+url = https://www.facebook.com/diepxuanco/?locale=nb_NO
 
