--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-09 20:03:54
+lastsearch = 2024-07-10 01:17:18
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Anti-Korean sentiment
-url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -142,9 +142,9 @@ title = Times of India: News - Latest News, Breaking News ...
 url = https://timesofindia.indiatimes.com/
 
 [www.riotgames.com]
-match = -120.0%%
-title = The Events in Korea Around League of Legends Worlds ...
-url = https://www.riotgames.com/en/news/worlds-2023-events-korea
+match = -145.0%%
+title = Riot's Korea Office and the Cultural Heritage Protection ...
+url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
 
 [www.shadowsedge.com]
 match = -135.0%%
@@ -237,9 +237,9 @@ title = The Hollowing Out of Kim Jong Un's North Korea
 url = https://carnegieendowment.org/research/2024/04/the-hollowing-out-of-kim-jong-uns-north-korea
 
 [www.usfk.mil]
-match = 11.1%%
-title = Traveling to Korea
-url = https://www.usfk.mil/Resources/Traveling-to-Korea/
+match = -20.0%%
+title = United States Forces Korea > About
+url = https://www.usfk.mil/About/Combined-Forces-Command/
 
 [www.coingecko.com]
 match = 27.8%%
