--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-09 22:13:32
+lastsearch = 2024-07-10 01:39:01
 
 [everonvn.com.vn]
-match = -77.8%%
-title = Bảng giá bộ chăn ga gối Everon Ep 1636 (car) dành cho trẻ em
-url = https://everonvn.com.vn/everon/394/bo-everon-car
+match = 7.4%%
+title = Bộ Artemis Tk Giảm Giá - Everon
+url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
 
 [everon.com.vn]
 match = 40.0%%
