--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-10 00:18:16
+lastsearch = 2024-07-10 01:36:03
 
 [demxanh.com]
-match = -60.9%%
-title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
+match = 30.4%%
+title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
+url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
 
 [www.diepxuan.com]
 match = 21.7%%
