--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-09 22:47:36
+lastsearch = 2024-07-10 01:42:42
 
 [shopee.vn]
 match = -33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = -25.0%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 60.9%%
+title = Chiếu điều hòa Nhật Bản
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -155,4 +155,9 @@ url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 match = -37.5%%
 title = Bộ chiếu gối điều hòa cao cấp - CỬA HÀNG MẸ VÀ BÉ ...
 url = https://voicon.net/bo-chieu-goi-dieu-hoa-cao-cap/
+
+[h5.lazada.vn]
+match = -62.5%%
+title = Chiếu điều hòa mát lạnh ĐỦ SIZE loại dày, chiếu mây có ...
+url = https://h5.lazada.vn/products/chieu-dieu-hoa-mat-lanh-du-size-loai-day-chieu-may-co-the-gap-gon-giup-ngu-ngon-hon-i557242724.html
 
