--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-09 22:30:05
+lastsearch = 2024-07-10 01:52:05
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=GzepFXdUfeQ
+match = -104.8%%
+title = Đi Đâu Chơi Ăn Gì Khi Đến Đài Loan - Một Ngày Khám Phá ...
+url = https://www.youtube.com/watch?v=FH6nkqGHOZk
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -37,9 +37,9 @@ title = Tổng hợp quy định nhập cảnh Đài Loan 2024
 url = https://vnpay.vn/quy-dinh-nhap-canh-dai-loan-0pgkjx2c6vit
 
 [taiwandiary.vn]
-match = -100.0%%
-title = Tổng hợp các loại visa tại Đài Loan có thể bạn chưa biết
-url = https://taiwandiary.vn/2024/05/29/tong-hop-cac-loai-visa-tai-dai-loan/
+match = -85.7%%
+title = Hướng Dẫn Đổi Hộ Chiếu Cho Người Việt Nam Ở Đài ...
+url = https://taiwandiary.vn/2023/02/27/huong-dan-doi-ho-chieu-cho-nguoi-viet-nam-o-dai-loan-moi-nhat/
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -114.3%%
-title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
-url = https://visana.vn/visa-dai-loan/
+match = -90.5%%
+title = Trọn bộ hướng dẫn làm visa Đài Loan công tác - VISANA
+url = https://visana.vn/huong-dan-lam-visa-dai-loan-di-cong-tac/
 
 [www.tiktok.com]
 match = -104.8%%
