--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-10 00:31:00
+lastsearch = 2024-07-10 01:51:54
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 14
+match = 20.0%%
+title = Chiếu lác D2 14 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-lac-d2-14.html
 
 [vinpearl.com]
