--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-09 23:17:49
+lastsearch = 2024-07-10 01:50:49
 
 [shopee.vn]
 match = 26.1%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.1
 [www.facebook.com]
 match = -30.4%%
 title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
-url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/
+url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/?locale=vi_VN
 
 [www.sendo.vn]
 match = -34.8%%
