--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-10 01:46:28
+lastsearch = 2024-07-10 02:18:47
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -17,8 +17,8 @@ title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
 url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
 
 [m.facebook.com]
-match = -13.6%%
-title = H&T Bedding - Tổng Kho Phân Phối
+match = -100.0%%
+title = Bùng nổ với Ga Gối Coco... - H&T Bedding - Tổng Kho Phân Phối
 url = https://m.facebook.com/story.php/?story_fbid=222482430873756&id=100093360007450
 
 [hanvico.com.vn]
