--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-10 00:51:06
+lastsearch = 2024-07-10 02:10:05
 
 [tiki.vn]
 match = -138.9%%
@@ -37,9 +37,9 @@ title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743 - CHÍNH HÃNG ...
 url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -72.2%%
-title = Bộ ga chun Cotton chống thấm màu xanh đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
+match = -77.8%%
+title = Bộ ga chun Cotton chống thấm màu xanh ngọc
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
 match = -61.1%%
