--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-10 00:44:58
+lastsearch = 2024-07-10 02:16:34
 
 [demxanh.com]
 match = 34.5%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [chiaki.vn]
-match = 10.3%%
-title = Chiếu Điều Hòa Tencel Latex Cao Su Non 3D mẫu 2022
-url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-3d-mau-2022
+match = 13.8%%
+title = Chiếu điều hòa cao su non Tencel Latex 2D mẫu 2022
+url = https://chiaki.vn/chieu-dieu-hoa-cao-su-non-tencel-latex-2d-mau-2022
 
 [shopee.vn]
 match = -20.7%%
@@ -47,9 +47,9 @@ title = chiếu điều hòa cao su non tencel latex 5D mềm mịn mướt ...
 url = https://shopee.vn/product/1063512412/22353005341?gsht=sjFxkDeGHTM5gwwS
 
 [thegioichieutruc.com]
-match = -34.5%%
-title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
 
 [thegioidemviet.vn]
 match = 58.6%%
