--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-09 21:30:04
+lastsearch = 2024-07-10 02:16:11
 
 [www.zillow.com]
 match = -69.2%%
@@ -147,9 +147,9 @@ title =
 url = https://georgia.gov/request-immunization-records
 
 [www.instagram.com]
-match = -207.7%%
-title = GANI (@ganistudios) • Instagram photos and videos
-url = https://www.instagram.com/ganistudios/
+match = -315.4%%
+title = Ayu Gani 🐘 | Models.. let's get ready for Model Development ...
+url = https://www.instagram.com/ganegani/reel/C0iVQney-fK/
 
 [www.mariettaga.gov]
 match = -38.5%%
