--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-09 22:50:53
+lastsearch = 2024-07-10 02:13:24
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -382,7 +382,7 @@ title = TUI customers beware - this is neither 5* nor Premium!
 url = https://www.tripadvisor.com/ShowUserReviews-g499445-d1163247-r941540096-Bahia_Principe_Luxury_Sian_Ka_an-Akumal_Yucatan_Peninsula.html
 
 [www.amazon.com]
-match = -250.0%%
-title = NEW!!! Wings of Fire Series Complete 16 Books Set
+match = -283.3%%
+title = NEW!!! Wings of Fire Series Complete 16 Books Set ...
 url = https://www.amazon.com/NEW-Wings-Fire-Complete-Books/dp/B09XFLHC2S
 
