--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-10 01:45:43
+lastsearch = 2024-07-10 02:13:34
 
 [tuananh.vn]
-match = 22.2%%
-title = Đệm Korea Gấm Plus
-url = https://tuananh.vn/dem-korea-gam-plus-p223.html
+match = 8.0%%
+title = Đệm bông ép 3 mảnh Korea Kaki
+url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 
 [demxanh.com]
 match = -28.0%%
@@ -32,8 +32,8 @@ title = nệm tuấn anh giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=nệm tuấn anh
 
 [demviethome.vn]
-match = -4.0%%
-title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
+match = -36.0%%
+title = Đệm bông ép Tuấn Anh Korea Gấm giá rẻ hà nội. ...
 url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [entershopping.vn]
