--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-09 15:46:58
+lastsearch = 2024-07-10 02:26:39
 
 [tiki.vn]
 match = -200.0%%
@@ -130,4 +130,9 @@ url = https://2mart.vn/chan-long-cuu-cho-be-2-lop-loai-day-dep
 match = -106.7%%
 title = 25 Giống chó chăn cừu phổ biến nhất hiện nay
 url = https://eva.vn/thu-nuoi/25-giong-cho-chan-cuu-pho-bien-nhat-hien-nay-c331a490554.html
+
+[muotbedding.vn]
+match = -106.7%%
+title = Chăn lông cừu dày 2 lớp mềm mịn ấm Size 2mx2m2
+url = https://muotbedding.vn/products/chan-long-cuu-day-2-lop-am-ap-min-muot-nhieu-mau-chan-ga-goi-dem-nhieu-mau
 
