--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-10 01:45:12
+lastsearch = 2024-07-10 02:32:05
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,8 +17,8 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
+match = -200.0%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
@@ -57,8 +57,8 @@ title = Khoai Bao | Nem cay siêu cuốn 😋
 url = https://www.instagram.com/khoaibao.official/reel/C6laGdMIPMb/?locale=zh-hans
 
 [www.diepxuan.com]
-match = -111.1%%
-title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+match = -55.6%%
+title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
